css/styles.css
:root {
  --purple: rgb(123, 31, 162);
  --violet: rgb(103, 58, 183);
  --pink: rgb(244, 143, 177);
  --gradient:
    linear-gradient(
      to right,
      var(--purple),
      var(--violet),
      var(--pink),
      var(--purple)
    );
}

@keyframes background-pan {
  from {
    background-position: 0% center;
  }

  to {
    background-position: -200% center;
  }
}

html {
  overflow-x: hidden;
}

main {
  background-color: rgb(15, 15, 15);
}

.hidden {
  display: none !important;
}

.section-header {
  color: white;
  padding-left: 1rem;
  padding-bottom: 1rem;
  border-bottom: 2px solid white;
  margin-bottom: 2rem;
}

.about-text-container {
  padding-left: 1rem;
}

/* Navbar animation to x and bars */

.close-navbar-toggler {
  position: fixed;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  z-index: 1;
  cursor: pointer;
}

.close-navbar-toggler.collapsed {
  z-index: -1;
}

.navbar {
  z-index: 2;
}

.navbar-toggler {
  width: 25px;
  height: 20px;
  position: relative;
  transition: 0.5s ease-in-out;
}

.navbar-toggler,
.navbar-toggler:focus,
.navbar-toggler:active {
  outline: none;
  box-shadow: none;
  border: 0;
}

.navbar-toggler span {
  margin: 0;
  padding: 0;
}

.toggler-icon {
  display: block;
  position: absolute;
  height: 3px;
  width: 100%;
  animation: background-pan 3s linear infinite;
  background: var(--gradient);
  background-size: 200%;
  border-radius: 1px;
  opacity: 1;
  left: 0;
  transform: rotate(0deg);
  transition: 0.25s ease-in-out;
}

.middle-bar {
  margin-top: 0;
}

.navbar-toggler .top-bar {
  top: inherit;
  transform: rotate(135deg);
}

.navbar-toggler .middle-bar {
  opacity: 0;
  top: inherit;
}

.navbar-toggler .bottom-bar {
  top: inherit;
  transform: rotate(-135deg);
}

.navbar-toggler.collapsed .top-bar {
  position: absolute;
  top: 0;
  transform: rotate(0deg);
}

.navbar-toggler.collapsed .middle-bar {
  position: absolute;
  top: 10px;
  opacity: 1;
}

.navbar-toggler.collapsed .bottom-bar {
  position: absolute;
  top: 20px;
  transform: rotate(0deg);
}

.navbar-toggler.collapsed .toggler-icon {
  animation: background-pan 3s linear infinite;
  background: var(--gradient);
  background-size: 200%;
}

.nav-border {
  margin-top: 1rem;
  width: 100%;
  height: 1px;
  animation: background-pan 3s linear infinite;
  background:
    linear-gradient(
      to right,
      var(--purple),
      var(--violet),
      var(--pink),
      var(--purple)
    );
  background-size: 200%;
}

.magic-text {
  animation: background-pan 3s linear infinite;
  background:
    linear-gradient(
      to right,
      var(--purple),
      var(--violet),
      var(--pink),
      var(--purple)
    );
  background-size: 200%;
  /* stylelint-disable */
  -webkit-background-clip: text;
  /* styline-enable */
  -webkit-text-fill-color: transparent;
  white-space: nowrap;
}

/* Home Section */

#home {
  background: rgb(25, 25, 25);
  width: 100%;
  height: 100vh;
}

.home-title {
  font-size: 3rem;
  color: white;
  text-align: center;
}

.container-cycle {
  position: relative;
  overflow: hidden;
  display: inline-block;
  color: white;
  font-size: 1.5rem;
  width: 100%;
  height: 37px;
}

.container-cycle span {
  position: absolute;
  width: 100%;
  text-align: center;
  white-space: nowrap;
  opacity: 0;
  animation: cycle-titles 20s linear infinite;
}

.container-cycle span:nth-child(2) {
  animation-delay: 5s;
}

.container-cycle span:nth-child(3) {
  animation-delay: 10s;
}

.container-cycle span:nth-child(4) {
  animation-delay: 15s;
}

/* Projects Section */

.track-container {
  margin: 0;
  position: relative;
  height: 50vh;
}

.track {
  gap: 4vmin;
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(0%, -50%);
  user-select: none;
}

.image {
  width: 40vmin;
  height: 56vmin;
  object-fit: cover;
  object-position: 100% center;
  border-radius: 0.25rem;
}

.about-image {
  border-radius: 50%;
}

.about-text {
  color: white;
}

/* Skills & Tools Section */

.badge {
  width: 60%;
  fill: white;
}

.skill-name {
  color: white;
  text-align: center;
}

/* Contact Me Section */

.link-icons > i {
  font-size: 2rem;
}

@media (hover: hover) {
  a:hover {
    cursor: pointer;
  }

  .track:hover {
    cursor: grab;
  }

  .track:active {
    cursor: grabbing;
  }
}

@keyframes cycle-titles {
  0% {
    opacity: 0;
  }

  1% {
    transform: translateX(-20px);
  }

  4% {
    opacity: 0;
  }

  5% {
    opacity: 1;
    transform: translateX(0px);
  }

  17% {
    opacity: 1;
    transform: translateX(0px);
  }

  19% {
    opacity: 0;
  }

  20% {
    transform: translateX(20px);
  }

  80% {
    opacity: 0;
  }

  100% {
    opacity: 0;
  }
}

